--- a/src/main/resources/templates/layouts/common.html
+++ b/src/main/resources/templates/layouts/common.html
@@ -37,7 +37,7 @@
 		<h2 style ="font-family:Snell Roundhand, cursive;">Essential Pencils</h2>
 	</div> <br/><br/>
 	<h4 th:text="${title}">Default Message Text</h4><br/>
-	<img th:src="@{/images/Logo.png}"/><br/><br/>
+	<img th:src="@{/images/Logo.jpg}"/><br/><br/>
 
 </div>
 <!-- Page title and Logo -->
