--- a/src/main/resources/templates/layouts/common.html
+++ b/src/main/resources/templates/layouts/common.html
@@ -7,26 +7,35 @@
 	<div class="bs-example">
 		<nav class="navbar-custom">
 			<!-- Brand and Toggle Get Grouped for better mobile Display -->
-			<div class="navbar-header">
+			<div sec:authorize="isAuthenticated()" class="navbar-header">
 				<button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
 					<span class="sr-only">Toggle Navigation</span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a href="/home/" class="navbar-brand">Essential Pencils</a>
+				<a href="/home/" class="navbar-brand">Home</a>
+			</div>
+			<div sec:authorize="isAnonymous()"class="navbar-header">
+				<button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+					<span class="sr-only">Toggle Navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a href="/" class="navbar-brand">Essential Pencils</a>
 			</div>
 			<!-- Collection of Nav Links and other content for toggling -->
 			<div id="navbarCollapse" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li><a href="/case/" class="navbar-dark">Pencil Case</a></li>
-					<li><a href="/search/" class="navbar-dark">Search</a></li>
-					<li><a href="/random/" class="navbar-dark">Random Picks</a></li>
+					<li sec:authorize="isAuthenticated()"><a href="/case/" class="navbar-dark">Pencil Case</a></li >
+					<li sec:authorize="isAuthenticated()"><a href="/search/" class="navbar-dark">Search</a></li >
+					<li sec:authorize="isAuthenticated()"><a href="/random/" class="navbar-dark">Random Picks</a></li >
 				</ul>
-				<ul th:if="${!session.isEmpty()}" class="nav navbar-nav navbar-right">
+				<ul sec:authorize="isAuthenticated()" class="nav navbar-nav navbar-right">
 						<li><a href="/logout" class="navbar-dark">Sign Out</a></li> 
 				</ul>
-				<ul th:if="${session.isEmpty()}" class="nav navbar-nav navbar-right">
+				<ul sec:authorize="isAnonymous()" class="nav navbar-nav navbar-right">
 						<li><a href="/login/" class="navbar-dark">Login</a></li>
 						<li><a href="/register/" class="navbar-dark">Register</a></li>
 				</ul>
