--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -23,9 +23,9 @@ layout:decorate="layouts/defaultTemplate">
 				<div class="error" th:text="${errorMessage}">
 				</div >
 			</div >
-			<divth:if="${errorMessage !=''}">
+			<div th:if="${errorMessage !=''}">
 			<br> <br>
-			<table class="utensil-table" style="width:50%">
+			<table class="utensil-table" style="width:50%" th:if="${!utensils.empty}" >
 				<thead>
 					<tr>
 						<th style="text-align:center">Type</th>
