--- a/src/main/resources/templates/layouts/common.html
+++ b/src/main/resources/templates/layouts/common.html
@@ -51,6 +51,6 @@
 </div>
 <!-- Page title and Logo -->
 <div th:fragment="footer">
-<h5 style="color:purple; text-align: center; position: fixed; bottom: 0; width: 100%;">Copyright 2021 Essential Pencils</h5>
+<h5 style="color:purple; text-align: center; position: relative; bottom: 0; width: 100%;">Copyright 2021 Essential Pencils</h5>
 </div>
 
